	   nsproxy.h and link with -lnsproxy library. See nsproxy.h for the
	   list of supported calls.

	Code is now fairly tested and can be evaluated in lab environment;
	consider feature full but still beta-quality for now.

	* tests/ns_proxy.test: First couple of tests. Still more
	to come...

	* tests/test.nscfg: Added loading of nsproxy in the test server.
	
2006-05-10  Vlad Seryakov  <seryakov@users.sf.net>

        * nsd/return.c: Make ReturnCharData to use Ns_WriteConn
        when sendRaw is specified, so pure binary data can be delivered

2006-05-07  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/ns_adp_compress.test: Updated result, tested on Firefox
	* nsd/conn.c:
	* nsd/return.c:
	* tests/ns_conn.tests: Added keepalive command to
	ns_conn to enable/disable keepalive for connection, can 
	be usefull when peersistent connection is needed without
	full HTTP/1.1 comformance

2006-06-06  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* Makefile: Included nsproxy into make process

2006-05-06  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/ns.h
	* nsd/pathname.c: Added Ns_BinPath. I'm not sure if this
	was already there and somebody removed it or not, but this
	one is really handy.

	* nsproxy/Makefile
	* nsproxy/ns_proxy.man:
	* nsproxy/nsproxy.c:
	* nsproxy/nsproxy.h
	* nsproxy/nsproxylib.c:
	* nsproxy/nsproxymod.c: Added ns_proxy mod from AOLserver 4.5.
	Improvements vs. the original code: 
          o. proxy handles can be used as Tcl commands for simpler
	     OO-like programming 
	  o. proxy slaves can be told to expire automatically
	     after some predefined idle time  
	  o  proxy slaves can setuid() to some other user ID 
	     if the parent process runs as superuser.
	  o. proxy subsystem is garbage-collected properly on exit

	NOTE: ns_proxy module is work in progress and is this not
	included in the standard make machinery. There are still
	things to do: complete the doc, write testsuite.
